# spd

./: README.md
lab1/: CMakeLists.txt  dupa.txt  test.txt  test_borsuk.txt  todo.md
lab1/inc/: Permutation.hh  algorithms.hh  dataTypes.hh  import_tools.hh  main.hh  problem.hh  solution.hh
lab1/solutions/: dj.txt  own.txt  p_schrage.txt  rj.txt  schrage.txt
lab1/src/: import_tools.cpp  main.cpp  problem.cpp  solution.cpp
lab1/test/: 100_Independent0291  100_Independent0333  100_Independent0420  100_Independent0600  100_Independent0601  100_Independent0602  100_Independent0603  100_Independent0604  100_Independent0605  100_Independent0606  100_Independent0607  100_Independent0608  100_Independent0609  100_Independent0610  100_Independent0611  100_Independent0612  100_Independent0613  100_Independent0614  100_Independent0615  100_Independent0616  100_Independent0617  100_Independent0618  100_Independent0619  100_Independent0620  100_Independent0621  100_Independent0622  100_Independent0623  100_Independent0624  100_Independent0625  100_Independent0626  100_Independent0627  100_Independent0628  100_Independent0629  100_Independent0650  100_Independent0651  100_Independent0652  100_Independent0653  100_Independent0654  100_Independent0655  100_Independent0656  (+34 more)
lab2/: CMakeLists.txt
lab2/inc/: dataTypes.hh  import_tools.hh
lab2/src/: import_tools.cpp  main.cpp  problem.cpp
lab2/test/: TAIL.TXT  readme.txt
